# moab

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  README.rst  RELEASE_NOTES  TODO  bitbucket-pipelines.yml  bitbucketci.yml  configure.ac  moab.make.in  setup.py  shippable.yml  suggest_configuration.sh
examples/: CMakeLists.txt  ContinentsOnGlobe.cpp  DirectAccessNoHolesF90.F90  ExtrudePoly.cpp  makefile  makefile.config.in  makefile.in  yt2moab.py
examples/advanced/: CoupleMGen.cpp  GenLargeMesh.cpp  LloydRelaxation.cpp  VisTags.cpp  makefile  test_trivial_distribution.cpp
examples/advanced/smoothing/: LaplacianSmoother.cpp  OptimizeMeshMesquite.cpp  makefile
examples/apps/: makefile
examples/apps/earth/: makefile  (+2 more)
examples/basic/: DeleteEdges.cpp  HelloParMOAB.cpp  ReadPartFile.cpp  StructuredMeshSimple.cpp  TestExodusII.cpp  UniformRefinement.cpp  makefile
examples/beginner/: README  makefile  mbex1.cpp  mbex2.cpp  mbex3.cpp  mbex4.cpp
examples/cmake/: CMakeLists.txt
examples/fortran/: MigrateMesh.F90  makefile  spherecube.h5m
examples/old/: FileRead.cpp  GeomSetHierarchy.cpp  KDTree.cpp  Makefile.am  ObbTree.cpp  SkinMesh.cpp  SurfArea.cpp
examples/python/: H5MToScrip.py  ScripToH5M.py  gr3rd.py  interrogate_mesh.py  laplaciansmoother.py  makefile  ocean.QU.240km.scrip.151209.nc  scrip3d.py  yt2moab.py
itaps/: CMakeLists.txt  Makefile.am
itaps/fbigeom/: CMakeLists.txt  FBiGeom-Defs.inc.in  FBiGeom.h  FBiGeom_MOAB.cpp  FBiGeom_MOAB.hpp  Makefile.am  testSmooth.cpp  testSmooth2.cpp  testgeom.cpp
itaps/imesh/: CMakeLists.txt  MBIter.hpp  MBiMesh.hpp  MOAB_iMeshP_unit_tests.cpp  MOAB_iMesh_extensions_tests.cpp  MOAB_iMesh_unit_tests.cpp  Makefile.am  iMesh-Defs.inc.in  iMesh_MOAB.cpp  iMesh_MOAB.hpp  partest.cpp
itaps/irel/: AssocPair.cpp  CMakeLists.txt  FBGeomAssocPairSide.cpp  GeomAssocPairSide.cpp  Makefile.am  MeshAssocPairSide.cpp  iRel-Defs.inc.in  iRel_Lasso.cpp  normals.cpp  test_entset.cpp  test_entsetFB.cpp
itaps/mesquite/: CMakeLists.txt  Makefile.am  MsqIGeom.cpp  MsqIGeom.hpp  MsqIMesh.cpp  MsqIMesh.hpp  MsqIMeshP.cpp  MsqIMeshP.hpp  MsqIRel.cpp  MsqIRel.hpp  MsqMOAB.cpp  MsqMOAB.hpp
pymoab/: CMakeLists.txt  Makefile.am  core.pyx  install.sh.cmake  interface_notes.txt  moab.pxd  pyproject.toml  requirements.txt  setup.py  setup.py.cmake.in  setup.py.in  types.pyx
pymoab/cmake/: FindCython.cmake  FindPythonDev.cmake  cython_test.pyx
pymoab/pymoab/: CMakeLists.txt  __init__.py  core.cpp  core.pxd  core.pyx  eh.pxd  hcoord.cpp  hcoord.pxd  hcoord.pyx  moab.pxd  moab.pxd.in  range.pxd  range.pyx  rng.cpp  rng.pyx  scd.cpp  scd.pxd  scd.pyx  skinner.cpp  skinner.pxd  skinner.pyx  tag.cpp  tag.pxd  tag.pyx  tag_conventions.pxd  topo_util.cpp  topo_util.pxd  topo_util.pyx  types.cpp  types.pyx
pymoab/tests/: CMakeLists.txt  cyl_grps.h5m  cyl_grps.vtk  driver.py  test_core.py  test_hom.py  test_range.py  test_scd.py  test_skinner.py  test_tag.py  test_topo_util.py
src/IntxMesh/: CMakeLists.txt  CslamUtils.hpp  Intx2Mesh.cpp  Intx2MeshInPlane.cpp  Intx2MeshOnSphere.cpp  IntxRllCssphere.cpp  IntxUtils.cpp  IntxUtils.hpp  Makefile.am  wrap_intx.cpp
src/Remapping/: Makefile.am  Remapper.cpp  RemapperUtils.cpp  TempestLinearRemap.cpp  TempestOfflineMap.cpp  TempestOnlineMap.cpp  TempestRemapper.cpp
test/io/: CMakeLists.txt  Makefile.am  VtkTest.cpp  ccmio_test.cpp  cgns_test.cpp  cub_file_test.cpp  exodus_test.cc  exodus_test.cpp  gmsh_test.cc  gmsh_test.cpp  ideas_test.cpp  nastran_test.cpp  read_cgm_basic_test.cpp  read_cgm_connectivity_test.cpp  read_cgm_facet_test.cpp  read_cgm_group_test.cpp  read_cgm_load_test.cpp  read_cgm_senses_test.cpp  read_gcrm_nc.cpp  read_mpas_nc.cpp  read_nc.cpp  read_obj_test.cpp  read_ucd_nc.cpp  readrtt_test.cpp  readutil_test.cpp  smf_test.cpp  stl_test.cpp  test_exo.cpp  test_rms.cpp  tqdcfr_test.cpp  write_nc.cpp
test/perf/: CMakeLists.txt  Makefile.am  adj_mem_time_test.cpp  adj_time.cpp  cubit_perf.cpp  perf.cpp  perftool.cpp  seqperf.cpp  tstt_perf.cpp  tstt_perf_binding.cpp  umr_perf.cpp
tools/: CMakeLists.txt  Makefile.am  SphereDecomp.cpp  SphereDecomp.hpp  addncdata.cpp  compareFiles.cpp  convert.cpp  depth.cpp  gsets.cpp  h5mtoscrip.cpp  honodes.cpp  makeops.cpp  mbaddchunk.cpp  mbmem.cpp  mbpart.cpp  mbslavepart.cpp  mbtempest.cpp  measure.cpp  measure.hpp  parread.cpp  parse.cpp  propagate_tags.cpp  quality.cpp  size.cpp  skin.cpp  sphere_decomp.cpp  surfplot.cpp  umr.cpp
tools/dagmc/: CMakeLists.txt  GenerateHierarchy.cpp  GenerateHierarchy.hpp  Makefile.am  cub2h5m.cc  dagmc_preproc.cpp  obb_analysis.cpp
tools/geometry/: .gitignore  CMakeLists.txt  GenerateHierarchy.hpp  Makefile.am  README  cgm2moab.cpp  cgm2moab.hpp  cub2h5m.cpp  obb_analysis.cpp  quads_to_tris.cpp
tools/mbcoupler/: CMakeLists.txt  Coupler.cpp  Coupler.hpp  DataCoupler.cpp  DataCoupler.hpp  ElemUtil.cpp  ElemUtil.hpp  ElemUtilTest.cpp  ElementTest.cpp  Makefile.am  addfield.cpp  conjHexParti.h5m  datacoupler_test.cpp  mbcoupler_test.cpp  ssn_test.cpp
tools/mbcslam/: Makefile.am  advection.F90  case1_test.cpp  create_dp.cpp  cslam_par_test.cpp  diffusion.cpp  intx_imesh.cpp  intx_mpas.cpp  linear_advection.cpp  linear_remap.cpp  proj1.cpp  update_tracer.cpp
tools/mbrebuild/: .gitignore  build  generate_hierarchy.cpp
tools/mcnpmit/: main.cpp  mcnpmit.cpp  mcnpmit.hpp
tools/mesquite/: CLArgFlag.cpp  CLArgFlag.hpp  CLArgs.cpp  CLArgs.hpp  CMakeLists.txt  Makefile.am  ManPage.cpp  ManPage.hpp  domain.cpp  domain.hpp  quality.cpp  randomize.cpp  shape-improve.cpp  transform.cpp
tools/refiner/: CMakeLists.txt  EdgeSizeEvaluator.hpp  EdgeSizeSimpleImplicit.cpp  EdgeSizeSimpleImplicit.hpp  EntityRefiner.cpp  EntityRefiner.hpp  Makefile.am  MeshOutputFunctor.cpp  MeshOutputFunctor.hpp  MeshRefiner.cpp  MeshRefiner.hpp  ProcessSet.hpp  RefinerTagManager.cpp  RefinerTagManager.hpp  SimplexTemplateRefiner.cpp  SimplexTemplateRefiner.hpp  SimplexTemplateTagAssigner.cpp  SimplexTemplateTagAssigner.hpp  SplitVertices.hpp  test_mesh_refiner.cpp
tools/vtkMOABReader/: Makefile.am
(+1148 files in other folders)
